added mvvm structure

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="no_internet">nointernet\n</string>
+    <string name="network_error">network error\n</string>
 </resources>
